--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-This is the famous bowling kata.
-Forked from guyroyse's ruby kata skeleton.
-An exercise in test-driven development.
+This is the famous bowling kata, an exercise in test-driven development.
+Program contains seven tests and solves kata.
+
+Structure forked from guyroyse's ruby kata skeleton.
